[gd_scene load_steps=29 format=3 uid="uid://c5bmhdxc6ctns"]

[ext_resource type="Texture2D" uid="uid://cqm1p2xqbjx8w" path="res://assets/vlack.png" id="1_8uys3"]
[ext_resource type="Script" uid="uid://dnh3k0e15b5pv" path="res://scripts/coffee_cup.gd" id="1_67dsn"]
[ext_resource type="Script" uid="uid://bkp1ls3d2s0n6" path="res://scenes/coffee_minigame.gd" id="1_gxvqg"]
[ext_resource type="Texture2D" uid="uid://bql36nbp8yf20" path="res://assets/sprites/coffee_minigame/cup_empty.png" id="2_kff00"]
[ext_resource type="Script" uid="uid://rhddnemrui5o" path="res://scripts/cup_sprite_2d.gd" id="3_67dsn"]
[ext_resource type="Texture2D" uid="uid://c1yw3msxc1rfs" path="res://assets/sprites/coffee_minigame/plate_placeholder.png" id="3_ipkrc"]
[ext_resource type="Script" uid="uid://dur4nbx3r57h8" path="res://scripts/coffee_plate.gd" id="4_67dsn"]
[ext_resource type="Texture2D" uid="uid://bnwoke5fdpcnh" path="res://assets/sprites/coffee_minigame/machine_placeholder.png" id="5_13anl"]
[ext_resource type="Script" uid="uid://ck2l1sc1fr5wi" path="res://scripts/coffee_machine.gd" id="6_3u56a"]
[ext_resource type="Script" uid="uid://dod1p4stvakrr" path="res://scripts/coffee_milk.gd" id="8_eqgwy"]
[ext_resource type="Texture2D" uid="uid://d2vbuucrywsmv" path="res://assets/sprites/coffee_minigame/milk_placeholder.png" id="8_vfmh3"]
[ext_resource type="Texture2D" uid="uid://dfbujqy8hl5kd" path="res://assets/sprites/coffee_minigame/syrup_chocolate.png" id="10_71nbp"]
[ext_resource type="Script" uid="uid://cn73j4sg4ag41" path="res://scripts/chocolate_syrup.gd" id="10_kff00"]
[ext_resource type="Texture2D" uid="uid://dymsn3rmt2lsv" path="res://assets/sprites/coffee_minigame/syrup_strawberry.png" id="11_kff00"]
[ext_resource type="Script" uid="uid://2bdjjyginwg8" path="res://scripts/strawberry_syrup.gd" id="12_f3amd"]
[ext_resource type="Texture2D" uid="uid://cf1bpy3ys8cru" path="res://assets/sprites/coffee_minigame/syrup_vanilla.png" id="12_ycjhj"]
[ext_resource type="Script" uid="uid://cs0l1oly76y3y" path="res://scripts/vanilla_syrup.gd" id="14_f3amd"]
[ext_resource type="Script" uid="uid://bm752l8kdqcvu" path="res://scripts/trash.gd" id="16_qw0w7"]
[ext_resource type="Texture2D" uid="uid://bufkp7vdgf0jo" path="res://assets/sprites/coffee_minigame/trash.png" id="17_8r4ny"]
[ext_resource type="Script" uid="uid://6o2b5gtatv4v" path="res://scripts/serve.gd" id="18_dilnk"]
[ext_resource type="Texture2D" uid="uid://8lmfeiwmkuwj" path="res://assets/sprites/coffee_minigame/serve.png" id="19_8uys3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vdge3"]
size = Vector2(104, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13anl"]
size = Vector2(112, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhgqp"]
size = Vector2(235, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67dsn"]
size = Vector2(15.75, 31.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3amd"]
size = Vector2(13.75, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dilnk"]
size = Vector2(13.875, 13.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gxvqg"]
size = Vector2(36.6667, 12.5)

[node name="coffee_minigame" type="Node2D"]
script = ExtResource("1_gxvqg")

[node name="bg" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_8uys3")

[node name="coffee_cup" type="Area2D" parent="."]
unique_name_in_owner = true
z_index = 1
position = Vector2(64, 64)
script = ExtResource("1_67dsn")

[node name="cup_sprite" type="Sprite2D" parent="coffee_cup"]
unique_name_in_owner = true
z_index = 1
position = Vector2(64, 64)
scale = Vector2(8, 8)
texture = ExtResource("2_kff00")
script = ExtResource("3_67dsn")

[node name="cup_button" type="Button" parent="coffee_cup/cup_sprite"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -7.0
offset_top = -4.0
offset_right = 6.0
offset_bottom = 7.0

[node name="cup_CollisionShape2D" type="CollisionShape2D" parent="coffee_cup"]
z_index = 1
position = Vector2(60, 76)
shape = SubResource("RectangleShape2D_vdge3")

[node name="coffee_plate" type="Area2D" parent="."]
position = Vector2(555, 332)
script = ExtResource("4_67dsn")

[node name="plate_Sprite2D" type="Sprite2D" parent="coffee_plate"]
scale = Vector2(8, 8)
texture = ExtResource("3_ipkrc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="coffee_plate"]
shape = SubResource("RectangleShape2D_13anl")

[node name="coffee_machine" type="Area2D" parent="."]
position = Vector2(225, -20)
script = ExtResource("6_3u56a")

[node name="Sprite2D" type="Sprite2D" parent="coffee_machine"]
position = Vector2(281.045, 178.649)
scale = Vector2(8, 8)
texture = ExtResource("5_13anl")

[node name="machine_button" type="Button" parent="coffee_machine/Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -15.7557
offset_top = -7.58107
offset_right = 13.9943
offset_bottom = 2.29393

[node name="CollisionShape2D" type="CollisionShape2D" parent="coffee_machine"]
position = Vector2(274.5, 150)
shape = SubResource("RectangleShape2D_yhgqp")

[node name="coffeemachinetimer" type="Timer" parent="coffee_machine"]
wait_time = 3.0
one_shot = true

[node name="coffee_milk" type="Area2D" parent="."]
position = Vector2(900, 250)
scale = Vector2(8, 8)
script = ExtResource("8_eqgwy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="coffee_milk"]
position = Vector2(-0.125, 0)
shape = SubResource("RectangleShape2D_67dsn")

[node name="Sprite2D" type="Sprite2D" parent="coffee_milk"]
texture = ExtResource("8_vfmh3")

[node name="milk_button" type="Button" parent="coffee_milk/Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -15.625
offset_right = 8.0
offset_bottom = 16.5

[node name="milktimer" type="Timer" parent="coffee_milk"]
wait_time = 0.2
one_shot = true

[node name="chocolate_syrup" type="Area2D" parent="."]
position = Vector2(100, 300)
scale = Vector2(6, 6)
script = ExtResource("10_kff00")

[node name="CollisionShape2D" type="CollisionShape2D" parent="chocolate_syrup"]
position = Vector2(0.125, 0.5)
shape = SubResource("RectangleShape2D_f3amd")

[node name="Sprite2D" type="Sprite2D" parent="chocolate_syrup"]
texture = ExtResource("10_71nbp")

[node name="chocolate_button" type="Button" parent="chocolate_syrup/Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -6.83333
offset_top = -5.83333
offset_right = 7.0
offset_bottom = 7.0

[node name="chocolatetimer" type="Timer" parent="chocolate_syrup"]
wait_time = 0.2
one_shot = true

[node name="strawberry_syrup" type="Area2D" parent="."]
position = Vector2(100, 400)
scale = Vector2(6, 6)
script = ExtResource("12_f3amd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="strawberry_syrup"]
position = Vector2(0.125, 0.5)
shape = SubResource("RectangleShape2D_f3amd")

[node name="Sprite2D" type="Sprite2D" parent="strawberry_syrup"]
texture = ExtResource("11_kff00")

[node name="strawberry_button" type="Button" parent="strawberry_syrup/Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -6.83333
offset_top = -5.83333
offset_right = 7.0
offset_bottom = 7.0

[node name="strawberrytimer" type="Timer" parent="strawberry_syrup"]
wait_time = 0.2
one_shot = true

[node name="vanilla_syrup" type="Area2D" parent="."]
position = Vector2(100, 500)
scale = Vector2(6, 6)
script = ExtResource("14_f3amd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="vanilla_syrup"]
position = Vector2(0.125, 0.5)
shape = SubResource("RectangleShape2D_f3amd")

[node name="Sprite2D" type="Sprite2D" parent="vanilla_syrup"]
texture = ExtResource("12_ycjhj")

[node name="vanilla_button" type="Button" parent="vanilla_syrup/Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -6.83333
offset_top = -5.83333
offset_right = 7.0
offset_bottom = 7.0

[node name="vanillatimer" type="Timer" parent="vanilla_syrup"]
wait_time = 0.2
one_shot = true

[node name="trash" type="Area2D" parent="."]
position = Vector2(1050, 550)
scale = Vector2(8, 8)
script = ExtResource("16_qw0w7")

[node name="Sprite2D" type="Sprite2D" parent="trash"]
texture = ExtResource("17_8r4ny")

[node name="Button" type="Button" parent="trash/Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -7.125
offset_top = -6.875
offset_right = 7.125
offset_bottom = 7.125

[node name="CollisionShape2D" type="CollisionShape2D" parent="trash"]
position = Vector2(-0.0625, 0)
shape = SubResource("RectangleShape2D_dilnk")

[node name="serve" type="Area2D" parent="."]
position = Vector2(555, 550)
scale = Vector2(6, 6)
script = ExtResource("18_dilnk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="serve"]
position = Vector2(0, -0.0833359)
shape = SubResource("RectangleShape2D_gxvqg")

[node name="Sprite2D" type="Sprite2D" parent="serve"]
texture = ExtResource("19_8uys3")

[node name="serve_button" type="Button" parent="serve/Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -18.3333
offset_top = -6.0
offset_right = 18.1667
offset_bottom = 6.33333

[connection signal="button_down" from="coffee_cup/cup_sprite/cup_button" to="coffee_cup" method="_on_button_button_down"]
[connection signal="button_up" from="coffee_cup/cup_sprite/cup_button" to="coffee_cup" method="_on_button_button_up"]
[connection signal="area_entered" from="coffee_plate" to="coffee_cup" method="_on_coffee_plate_area_entered"]
[connection signal="area_entered" from="coffee_plate" to="chocolate_syrup" method="_on_coffee_plate_area_entered"]
[connection signal="area_entered" from="coffee_plate" to="strawberry_syrup" method="_on_coffee_plate_area_entered"]
[connection signal="area_entered" from="coffee_plate" to="vanilla_syrup" method="_on_coffee_plate_area_entered"]
[connection signal="area_exited" from="coffee_plate" to="coffee_cup" method="_on_coffee_plate_area_exited"]
[connection signal="area_exited" from="coffee_plate" to="chocolate_syrup" method="_on_coffee_plate_area_exited"]
[connection signal="area_exited" from="coffee_plate" to="strawberry_syrup" method="_on_coffee_plate_area_exited"]
[connection signal="area_exited" from="coffee_plate" to="vanilla_syrup" method="_on_coffee_plate_area_exited"]
[connection signal="mouse_entered" from="coffee_plate" to="coffee_cup" method="_on_coffee_plate_mouse_entered"]
[connection signal="mouse_entered" from="coffee_plate" to="coffee_plate" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="coffee_plate" to="coffee_cup" method="_on_coffee_plate_mouse_exited"]
[connection signal="pressed" from="coffee_machine/Sprite2D/machine_button" to="coffee_machine" method="_on_button_pressed"]
[connection signal="timeout" from="coffee_machine/coffeemachinetimer" to="coffee_cup/cup_sprite" method="_on_coffeemachinetimer_timeout"]
[connection signal="timeout" from="coffee_machine/coffeemachinetimer" to="coffee_machine" method="_on_coffeemachinetimer_timeout"]
[connection signal="area_entered" from="coffee_milk" to="coffee_milk" method="_on_area_entered"]
[connection signal="area_exited" from="coffee_milk" to="coffee_milk" method="_on_area_exited"]
[connection signal="button_down" from="coffee_milk/Sprite2D/milk_button" to="coffee_milk" method="_on_milk_button_button_down"]
[connection signal="button_up" from="coffee_milk/Sprite2D/milk_button" to="coffee_milk" method="_on_milk_button_button_up"]
[connection signal="pressed" from="coffee_milk/Sprite2D/milk_button" to="coffee_milk" method="_on_milk_button_pressed"]
[connection signal="timeout" from="coffee_milk/milktimer" to="coffee_cup/cup_sprite" method="_on_milktimer_timeout"]
[connection signal="timeout" from="coffee_milk/milktimer" to="coffee_milk" method="_on_milktimer_timeout"]
[connection signal="button_down" from="chocolate_syrup/Sprite2D/chocolate_button" to="chocolate_syrup" method="_on_chocolate_button_button_down"]
[connection signal="button_up" from="chocolate_syrup/Sprite2D/chocolate_button" to="chocolate_syrup" method="_on_chocolate_button_button_up"]
[connection signal="timeout" from="chocolate_syrup/chocolatetimer" to="chocolate_syrup" method="_on_timer_timeout"]
[connection signal="button_down" from="strawberry_syrup/Sprite2D/strawberry_button" to="strawberry_syrup" method="_on_strawberry_button_button_down"]
[connection signal="button_up" from="strawberry_syrup/Sprite2D/strawberry_button" to="strawberry_syrup" method="_on_strawberry_button_button_up"]
[connection signal="timeout" from="strawberry_syrup/strawberrytimer" to="strawberry_syrup" method="_on_strawberrytimer_timeout"]
[connection signal="button_down" from="vanilla_syrup/Sprite2D/vanilla_button" to="vanilla_syrup" method="_on_vanilla_button_button_down"]
[connection signal="button_up" from="vanilla_syrup/Sprite2D/vanilla_button" to="vanilla_syrup" method="_on_vanilla_button_button_up"]
[connection signal="timeout" from="vanilla_syrup/vanillatimer" to="vanilla_syrup" method="_on_vanillatimer_timeout"]
[connection signal="pressed" from="trash/Sprite2D/Button" to="trash" method="_on_button_pressed"]
[connection signal="pressed" from="serve/Sprite2D/serve_button" to="." method="_on_serve_button_pressed"]
[connection signal="pressed" from="serve/Sprite2D/serve_button" to="serve" method="_on_serve_button_pressed"]
